Issue #15394: Fix ref leaks in PyModule_Create.

Patch by Julia Lawall.